--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -10,12 +10,16 @@ page {
   color: white;
   font-size: 16px;
 }
-
+.container{
+  display:flex;
+  flex-direction:column;
+}
 .header {
   width: 100%;
-  height: 80rpx;
-  line-height: 80rpx;
+  height: 35px;
+  line-height: 35px;
   text-align: center;
+  
 }
 
 .icon {
@@ -29,9 +33,11 @@ page {
   vertical-align: middle;
 }
 
-.content {
+/* .content {
   width: 100%;
-}
+  height:80%;
+  flex:1,
+} */
 
 .cond_txt {
   font-size: 12px;
@@ -48,7 +54,7 @@ page {
   width: 93%;
   margin-right: 10px;
   margin-left: 10px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid rgba(255,255,255,0.3);
   position: relative;
   padding-bottom: 10px;
 }
@@ -92,10 +98,10 @@ page {
   margin-right: 10px;
   margin-left: 10px;
   white-space: nowrap;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid rgba(255,255,255,0.3);
 }
 .scroll-view_Y{
-  height:90%;
+  height:80%;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -108,8 +114,8 @@ page {
   width: 93%;
   margin-right: 10px;
   margin-left: 10px;
-  border-bottom: 1px solid gray;
-  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+  padding-bottom: 10px
 }
 .next_tmp_item{
   position: relative;
@@ -120,4 +126,31 @@ page {
   width:60px;
   height:60px;
   top:-4px;
+}
+
+.daily_item{
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+  display:flex;
+}
+.daily_item_line1,.daily_item_line2{
+  flex:1;
+  display:flex;
+  flex-direction:column;
+}
+.daily_item_text{
+  font-size:12px;
+  color:rgba(255,255,255,0.5);
+  margin-bottom:5px;
+  margin-top:5px;
+}
+.daily_item_data{
+  margin-bottom:5px;
+}
+.lifestyle_item{
+  padding:5px 0;
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+  display:flex;
+}
+.lifestyle_item_line1,.lifestyle_item_line2{
+  flex: 1
 }
